--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
     compile 'com.commonsware.cwac:wakeful:1.0.+'
     compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.loopj.android:android-async-http:1.4.9'
 }
